--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title> Abedur Rahman Ove | Portfolio</title>
-    <link rel="icon" href="https://arove.me/src/png/main-favicon.png" type="image/x-icon">
+    <link rel="icon" href="./src/png/main-favicon.png" type="image/x-icon">
     <!--Style-->
     <link rel="stylesheet" href="404/404.css">
 </head>
